Add launch version